--- a/task-4/style.css
+++ b/task-4/style.css
@@ -1,3 +1,47 @@
-*{
+.todo-app {
+    max-width: 600px;
+    margin: 0 auto;
+    min-height: 400px;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 2px 4px 5px -2px rgba(0,0,0,0.41);
+}
+.todo-app h1{
+    text-align: center;
+}
+.todo-app__title {
+    font-weight: bold;
+    font-size: 1.5em;
+    display: block;
+}
 
+.todo-app__date {
+    font-size: 0.8em;
+    color: #555;
+}
+
+.todo-app__author {
+    background: black;
+    color: white;
+}
+
+.todo-app__remove_link {
+    color: red;
+    float: right;
+}
+
+.todo-container {
+    margin: 0;
+    padding: 0;
+}
+
+.todo-container li {
+    display: block;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 12px;
+}
+
+.todo-container li:not(:last-child) {
+    margin-bottom: 20px;
 }
